# Machfly

./: .gitignore  Makefile  Readme.md  meson.build
Backups/23dec21/: Machfly.h
Backups/23dec21/Datafly/: DataLoader.cpp  DataPlain.cpp
Backups/24dec/: Machfly.cpp
Backups/24dec/Datafly/: Dataframe.h
Backups/24dec/Machfly/: Machfly.cpp  Machfly.h
Backups/24dec/Machfly/Datafly/: Machframe.h
Backups/24dec/Machfly/Extras/: ErrorFunc.cpp  ErrorFunc.h
Backups/24dec/Machfly/Parsers/: SVDocumentClass.h  temp
Binary/: Machfly  Machfly.app
Datasets/: sample.csv
Docs/: Day1.md  Next.md  SVPlaning.md
Docs/Images/: _oldReadme
Machfly/: Machfly.cpp  meson.build
Machfly/Core/: Defs.h
Machfly/Datafly/: DataLoader.cpp  DataLoader.h  DataPlain.cpp  DataPlain.h  Machframe.h
Machfly/Datagrid/: Cell.cpp  Cell.h  Dataplain.cpp  Dataplain.h  Grid.cpp  Grid.h  Gridcell.cpp  Gridcell.h  Series.cpp  Series.h
Machfly/Extras/: ErrorFunc.h
Machfly/Genric/: Filestream.cpp  Filestream.h
Machfly/Parsers/: CSVParser.h  SVDocumentClass.cpp  SVDocumentClass.h
Machfly/SVDocument/: SVDocument.cpp  SVDocument.h  SVDocumentParser.cpp  SVDocumentParser.h  SVDocumentRow.cpp  SVDocumentRow.h
Scripts/: Compile.sh
docs/: index.html  index.md
